rebase и восстановил работоспособность костылем